packages/lemon_js/native/quickjs_bridge.h

#ifndef QUICKJS_BRIDGE_H
#define QUICKJS_BRIDGE_H

#include <stdint.h>

#ifdef _WIN32
#  ifdef QUICKJS_BRIDGE_BUILD
#    define QJS_BRIDGE_EXPORT __declspec(dllexport)
#  else
#    define QJS_BRIDGE_EXPORT __declspec(dllimport)
#  endif
#else
#  define QJS_BRIDGE_EXPORT __attribute__((visibility("default"))) __attribute__((used))
#endif

#ifdef __cplusplus
extern "C" {
#endif

/* 返回当前打包的 QuickJS 版本字符串，例如 "0.15.1"。 */
QJS_BRIDGE_EXPORT const char *quickjs_version(void);

/* Dart 侧只持有这个不透明指针，不直接访问内部 JSRuntime / JSContext。 */
typedef struct QuickjsRuntime QuickjsRuntime;
typedef struct QuickjsContext QuickjsContext;
typedef int64_t (*QuickjsHostCallback)(int64_t callback_id,
                                       const char *args_json);
typedef int64_t (*QuickjsHostStreamPull)(int64_t stream_id);
typedef void (*QuickjsHostStreamCancel)(int64_t stream_id);
typedef int64_t (*QuickjsHostSinkAction)(int64_t sink_id, const char *action,
                                         const char *payload_json);

QJS_BRIDGE_EXPORT QuickjsRuntime *quickjs_runtime_new(void);
QJS_BRIDGE_EXPORT void quickjs_runtime_free(QuickjsRuntime *runtime);

/*
 * Creates an additional JavaScript context inside an existing runtime.
 * Contexts share the QuickJS job queue and memory limits but own independent
 * globals and ES module instances. The runtime must outlive every context.
 */
QJS_BRIDGE_EXPORT QuickjsContext *quickjs_context_new(
    QuickjsRuntime *runtime);
QJS_BRIDGE_EXPORT void quickjs_context_free(QuickjsContext *context);
QJS_BRIDGE_EXPORT char *quickjs_context_eval_timeout_named(
    QuickjsContext *context, const char *code, const char *name,
    int64_t timeout_ms);
QJS_BRIDGE_EXPORT char *quickjs_context_eval_module(
    QuickjsContext *context, const char *source, const char *name,
    const char *modules);
QJS_BRIDGE_EXPORT int quickjs_context_bind_callback(
    QuickjsContext *context, int64_t callback_id, const char *name,
    QuickjsHostCallback callback);
QJS_BRIDGE_EXPORT char *quickjs_context_eval_async_start_named(
    QuickjsContext *context, const char *code, const char *name);
QJS_BRIDGE_EXPORT char *quickjs_context_eval_async_poll(
    QuickjsContext *context);
/* Runs due timers/jobs for one context and returns milliseconds until its
 * next timer. -1 means no timer; -2 means a pending-job failure. */
QJS_BRIDGE_EXPORT int64_t quickjs_context_pump_timers(
    QuickjsContext *context);
QJS_BRIDGE_EXPORT int quickjs_context_bind_sink(
    QuickjsContext *context, int64_t sink_id, const char *name);
QJS_BRIDGE_EXPORT void quickjs_runtime_set_memory_limit(
    QuickjsRuntime *runtime, int64_t limit_bytes);
QJS_BRIDGE_EXPORT void quickjs_runtime_set_stack_limit(
    QuickjsRuntime *runtime, int64_t limit_bytes);
QJS_BRIDGE_EXPORT void quickjs_runtime_set_cancel_flag(
    QuickjsRuntime *runtime, int32_t *cancel_flag);
QJS_BRIDGE_EXPORT int64_t quickjs_runtime_pump_timers(
    QuickjsRuntime *runtime);

/*
 * 在全局作用域执行 JavaScript。
 * 返回新分配的 UTF-8 字符串；调用方必须用 quickjs_free_string() 释放。
 * 特殊错误通过不可见 sentinel 前缀返回，由 Dart worker 还原成异常类型。
 */
QJS_BRIDGE_EXPORT char *quickjs_eval(QuickjsRuntime *runtime, const char *code);
QJS_BRIDGE_EXPORT char *quickjs_eval_timeout(QuickjsRuntime *runtime,
                                             const char *code,
                                             int64_t timeout_ms);
QJS_BRIDGE_EXPORT char *quickjs_eval_timeout_named(QuickjsRuntime *runtime,
                                                   const char *code,
                                                   const char *name,
                                                   int64_t timeout_ms);
QJS_BRIDGE_EXPORT char *quickjs_eval_module(QuickjsRuntime *runtime,
                                            const char *source,
                                            const char *name,
                                            const char *modules);
QJS_BRIDGE_EXPORT int quickjs_runtime_bind_callback(
    QuickjsRuntime *runtime, int64_t callback_id, const char *name,
    QuickjsHostCallback callback);
QJS_BRIDGE_EXPORT char *quickjs_eval_async_start(QuickjsRuntime *runtime,
                                                 const char *code);
QJS_BRIDGE_EXPORT char *quickjs_eval_async_start_named(QuickjsRuntime *runtime,
                                                       const char *code,
                                                       const char *name);
QJS_BRIDGE_EXPORT char *quickjs_eval_async_poll(QuickjsRuntime *runtime);
QJS_BRIDGE_EXPORT int quickjs_runtime_resolve_callback(
    QuickjsRuntime *runtime, int64_t request_id, int success,
    const char *payload_json);
QJS_BRIDGE_EXPORT void quickjs_runtime_set_stream_handlers(
    QuickjsRuntime *runtime, QuickjsHostStreamPull pull,
    QuickjsHostStreamCancel cancel, QuickjsHostSinkAction sink_action);
QJS_BRIDGE_EXPORT int quickjs_runtime_resolve_stream_pull(
    QuickjsRuntime *runtime, int64_t request_id, int success,
    const char *payload_json);
QJS_BRIDGE_EXPORT int quickjs_runtime_resolve_sink_action(
    QuickjsRuntime *runtime, int64_t request_id, int success,
    const char *message);
QJS_BRIDGE_EXPORT int quickjs_runtime_bind_sink(QuickjsRuntime *runtime,
                                                int64_t sink_id,
                                                const char *name);

QJS_BRIDGE_EXPORT void quickjs_free_string(char *str);

#ifdef __cplusplus
}
#endif

#endif /* QUICKJS_BRIDGE_H */